Corrección de errores y se agrega el servicio web para cambiar es estatus al pedido

--- a/WebApiREST/WebApiREST.csproj
+++ b/WebApiREST/WebApiREST.csproj
@@ -212,6 +212,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\NegocioController.cs" />
+    <Compile Include="Controllers\PedidoController.cs" />
     <Compile Include="Controllers\UsuarioAplicacionController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
