--- a/EFModel/EFModel.csproj
+++ b/EFModel/EFModel.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceObject\SO_Calificacion.cs" />
     <Compile Include="ServiceObject\SO_Categoria.cs" />
     <Compile Include="ServiceObject\SO_Negocio.cs" />
     <Compile Include="ServiceObject\SO_Pedidos.cs" />
